added disclaimer and changed color

--- a/expressive-web/home.html
+++ b/expressive-web/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Start page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="home.css">
@@ -19,6 +19,8 @@
         <p class="open-text">What kind of commuter are you? Are you asleep, lost in your own thoughts, drowning out the noise with music, trying to remain invisible to others, or stressed about never-ending delays? </p>
         <p class="open-text">But what if you stopped to really think about your commute? Amid the drudgery of trekking to and fro, do you ever wonder what you might be missing along the way.</p>
         <a href="index.html" class="start-link">Click here to see the different sights along the commute on our way to class</a>
+        <br>
+        <small>NOTE: page has a lot of audio and takes a little time to load</small>
     </div>
 </body>
 <script src="script-edit.js"></script>
