--- a/expressive-web/home.html
+++ b/expressive-web/home.html
@@ -20,7 +20,7 @@
         <p class="open-text">But what if you stopped to really think about your commute? Amid the drudgery of trekking to and fro, do you ever wonder what you might be missing along the way.</p>
         <a href="index.html" class="start-link">Click here to see the different sights along the commute on our way to class</a>
         <br>
-        <small>NOTE: page has a lot of audio and takes a little time to load</small>
+        <small>NOTE: As of 12/16/23, it seems that nycgovparks.org websites are down.</small>
     </div>
 </body>
 <script src="script-edit.js"></script>
