--- a/expressive-web/index-scroll.html
+++ b/expressive-web/index-scroll.html
@@ -8,9 +8,9 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style>
         body {
-  font-family: 'Noto Sans',sans-serif;
-  background-color: blue;
-}
+            font-family: 'Noto Sans',sans-serif;
+            background-color: rgb(69, 69, 228);
+        }
     </style>
 </head>
 <body>
