renamed files and put unused code into folder

--- a/expressive-web/unused-code/index-orig.html
+++ b/expressive-web/unused-code/index-orig.html
@@ -6,7 +6,7 @@
     <title>Travel-copy</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-orig.css">
 </head>
 <body class="body-tag">
     <a href="home.html" class="home-link">Home</a>
@@ -766,5 +766,5 @@
     </main> -->
 </body>
 <script src="https://cdn.jsdelivr.net/npm/p5@1.4.2/lib/p5.js"></script>
-<script src="script.js"></script>
+<script src="script-orig.js"></script>
 </html>
