added comment and duplicated files

--- a/assignment-2-css/layout-one/index.html
+++ b/assignment-2-css/layout-one/index.html
@@ -8,7 +8,7 @@
 
 <body>
 
-
+    <!--<header> creates a header bar that you can use as nav bar-->
     <header>
         <div class="header-inner">
             <div class="website-name">
