--- a/html-css-workshop/shapes/index.html
+++ b/html-css-workshop/shapes/index.html
@@ -11,6 +11,7 @@
     <div class="outer-cont">
         <div class="square"></div>
         <div class="circle"></div>
+        <div class="oval"></div>
         <div class="triangle-down"></div>
         <div class="triangle-left-up"></div>
         <div class="triangle-left-down"></div>
