--- a/html-css-workshop/shapes/index.html
+++ b/html-css-workshop/shapes/index.html
@@ -10,6 +10,7 @@
 
     <div class="outer-cont">
         <div class="square"></div>
+        <div class="diamond"></div>
         <div class="circle"></div>
         <div class="oval"></div>
         <div class="triangle-down"></div>
