--- a/W3-JS-Exercises/index-variables.html
+++ b/W3-JS-Exercises/index-variables.html
@@ -36,10 +36,14 @@
         alert(z); 
     }
     sumTwo();
+    
+    //declare variables - can declare a list and separate by comma
+    let firstName = "Walter", lastName = "Ellering", age = 35;
 
-    let firstName = "Walter";
-    let lastName = "Ellering";
-    let age = 35;
+    //orig way of declaring var w/ let statement for each line
+    // let firstName = "Walter";
+    // let lastName = "Ellering";
+    // let age = 35;
     document.getElementById("name").innerHTML = `${firstName} ${lastName} is ${age} years old!`; //will show statement Walter Ellering is 35 years old Use `` to interpolate the variables 
 </script>
 </body>
