--- a/W3-JS-Exercises/index-array-methods.html
+++ b/W3-JS-Exercises/index-array-methods.html
@@ -21,6 +21,8 @@
     <div id="list"></div>
     <br>
     <div id="short"></div>
+    <br>
+    <div id="order"></div>
     
     <script>
         //REMOVE LAST ITEM IN ARRAY - use .pop() method
@@ -39,6 +41,11 @@
         fruits.splice(1,3); //removes 1st, 2nd, & 3rd items in array 
         console.log('spliceFruits', fruits); //pineapples, oranges, blueberries
         document.getElementById('short').innerHTML = (fruits); //pineapples, oranges, blueberries
+
+        //SORT - use .sort() method to sort items alphabetically
+        fruits.sort();
+        console.log('sort', fruits);
+        document.getElementById("order").innerHTML = (fruits); //blueberries, oranges, pineapples
         
     </script>
 </body>
