--- a/W3-JS-Exercises/index-math.html
+++ b/W3-JS-Exercises/index-math.html
@@ -57,7 +57,7 @@
         let y = Math.min(10, 20, 42, 6); //returns 6
         document.getElementById("min").innerHTML = (y + " is the min number from set 10, 20, 42, 6.");
 
-        //use Math.round() to round # to nearest integer
+        //Use Math.round() to round # to nearest integer
         let a = Math.round(5.3); //rounds to 5
         document.getElementById("round").innerHTML = (a + " is what 5.3 rounds to");
 
