--- a/W3-JS-Exercises/index-loops.html
+++ b/W3-JS-Exercises/index-loops.html
@@ -44,7 +44,7 @@
             console.log('for', i); //0,1,2,3,4,5,6,7,8,9
         }
 
-        //create a loop that runs through each item in fruits array
+        //Create a loop that runs through each item in fruits array
         let fruits = ["lychee", "ackee", "breadfruit", "persimmons"];
         for (x of fruits) {
             console.log('array', x); //shows each item in fruit
