--- a/W3-JS-Exercises/index-operators.html
+++ b/W3-JS-Exercises/index-operators.html
@@ -9,9 +9,13 @@
             background-color: lightblue;
             font-size: 18px;
         }
+        h1{
+            color: crimson;
+        }
     </style>
 </head>
 <body>
+    <h1>JS Operators Exercises</h1>
     <div id="add"></div>
     <br>
     <div id="minus"></div>
